bugfix: campaign page disable horizontal scroll

--- a/static/css/campaign_form.css
+++ b/static/css/campaign_form.css
@@ -223,8 +223,8 @@ display:inline;
     border-bottom: 1px solid white;
     border: 1px solid black;
     padding-bottom: 20px;
-    padding-left:20px;
-    min-width:300px;
+    padding-left:5px;
+    min-width: 275px;
     box-shadow: 2px 2px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
